// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a selected value 1`] = `
<div
  className="sui-results-per-page"
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <e
    caretIcon={<DownChevron />}
    key="result_page_select_[object Object]"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": 20,
          "value": 20,
        },
        Object {
          "text": 40,
          "value": 40,
        },
      ]
    }
    selectedValue={40}
  />
</div>
`;

exports[`renders correctly when there is not a selected value 1`] = `
<div
  className="sui-results-per-page"
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <e
    caretIcon={<DownChevron />}
    key="result_page_select_null"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": 20,
          "value": 20,
        },
        Object {
          "text": 40,
          "value": 40,
        },
      ]
    }
    selectedValue={null}
  />
</div>
`;
